// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable Component In edit mode should match snapshot 1`] = `
Array [
  <span
    class="undefined"
  >
    <img
      alt="Submit"
      src="[object Object]"
    />
    <img
      alt="Delete"
      src="[object Object]"
    />
  </span>,
  <table
    class=""
  >
    <tbody>
      <tr
        class="undefined"
      >
        <td>
          <input
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            type="text"
            value=""
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`DataTable Component In edit mode, with items should match snapshot 1`] = `
Array [
  <span
    class="undefined"
  >
    <img
      alt="Submit"
      src="[object Object]"
    />
    <img
      alt="Delete"
      src="[object Object]"
    />
  </span>,
  <span
    class="undefined"
  >
    <img
      alt="Submit"
      src="[object Object]"
    />
    <img
      alt="Delete"
      src="[object Object]"
    />
  </span>,
  <span
    class="undefined"
  >
    <img
      alt="Submit"
      src="[object Object]"
    />
    <img
      alt="Delete"
      src="[object Object]"
    />
  </span>,
  <table
    class=""
  >
    <tbody>
      <tr
        class="undefined"
      >
        <td>
          <input
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            type="text"
            value=""
          />
        </td>
      </tr>
      <tr
        class="undefined"
      >
        <td>
          <input
            type="text"
            value="test"
          />
        </td>
        <td>
          <input
            type="text"
            value="fixture"
          />
        </td>
      </tr>
      <tr
        class="undefined"
      >
        <td>
          <input
            type="text"
            value="other"
          />
        </td>
        <td>
          <input
            type="text"
            value="fixture"
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`DataTable Component In read-only mode should match snapshot 1`] = `
<table
  class=""
>
  <tbody />
</table>
`;
